--- a/certification.html
+++ b/certification.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>미코팀 | 작업인증</title>
+    <title>미코팀 | 롤 대리 작업 인증</title>
+<meta name="description" content="미코팀의 실제 작업 인증 이미지와 영상으로 신뢰를 확인하세요.">
+<meta name="keywords" content="롤 대리 인증, 작업 인증, 롤 실시간 인증, 미코팀 인증">
+
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
 </head>
@@ -65,7 +69,7 @@
 
     <div class="progress-container">
         <div class="progress-gallery">
-            <div class="progress-card" data-tier="challenger" data-service="delegation">
+            <div class="progress-card" data-tier="master" data-service="delegation">
                 <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">마스터</span>
@@ -75,7 +79,7 @@
                 <p class="progress-date">2025년 1월 20일</p>
             </div>
 
-            <div class="progress-card" data-tier="master" data-service="duo">
+            <div class="progress-card" data-tier="master" data-service="delegation">
                 <img src="img/Group 2.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">마스터</span>
@@ -86,7 +90,7 @@
             </div>
 
 
-            <div class="progress-card" data-tier="diamond" data-service="lesson">
+            <div class="progress-card" data-tier="challenger" data-service="delegation">
                 <img src="img/Group 3.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
@@ -97,7 +101,7 @@
             </div>
 
 
-            <div class="progress-card" data-tier="challenger" data-service="duo">
+            <div class="progress-card" data-tier="challenger" data-service="delegation">
                 <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
@@ -119,7 +123,7 @@
             </div>
 
 
-            <div class="progress-card" data-tier="diamond" data-service="duo">
+            <div class="progress-card" data-tier="diamond" data-service="delegation">
                 <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">다이아</span>
