--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미코팀 | 롤 대리 · 롤 듀오 · 롤 강의 전문 팀 | 최강 실력과 신뢰의 No.1</title>
+    <meta name="description" content="롤 대리부터 강의, 듀오까지! 미코팀은 믿을 수 있는 롤 전문 대리팀입니다. 빠르고 안전하게 챔피언을 향해 도전하세요.">
+<meta name="keywords" content="롤 대리, 미코팀, 롤 듀오, 리그오브레전드 대리, 롤 강의, 롤대리팀">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
