--- a/lineup.html
+++ b/lineup.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>미코팀 | 기사 라인업</title>
+  <meta name="description" content="미코팀에서 활동 중인 롤 대리 기사들을 소개합니다. 실력과 경험을 갖춘 전문가들을 확인해보세요.">
+<meta name="keywords" content="롤 대리 기사, 미코팀 기사, 롤 대리 프로필, 롤 대리 전문가">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
