--- a/price-coaching.html
+++ b/price-coaching.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>미코팀 | 공지사항</title>
+  <meta name="description" content="실력 향상을 위한 1:1 강의 서비스! 티어 상승을 위한 맞춤 롤 강의 제공.">
+<meta name="keywords" content="롤 강의, 롤 1:1 강의, 롤 코칭, 미코팀 강의">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
