--- a/price-consulting.html
+++ b/price-consulting.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>미코팀 | 공지사항</title>
+  <meta name="description" content="롤 관련 맞춤형 대리 및 컨설팅 서비스 안내. 실전 분석, 전략 수립까지!">
+<meta name="keywords" content="롤 컨설팅, 롤 기타 대리, 맞춤 대리, 전략 분석, 미코팀 특별 서비스">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
