--- a/price-duo.html
+++ b/price-duo.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>미코팀 | 공지사항</title>
+  <meta name="description" content="믿을 수 있는 듀오랭크 서비스! 미코팀의 듀오 가격을 티어별로 안내합니다.">
+<meta name="keywords" content="롤 듀오랭크 가격, 롤 듀오 비용, 듀오 대리, 미코팀 듀오">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
