--- a/price-growth.html
+++ b/price-growth.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>미코팀 | 공지사항</title>
+  <meta name="description" content="새 계정부터 마스터까지! 미코팀이 책임지는 계정 육성 서비스.">
+<meta name="keywords" content="롤 육성, 계정 육성, 롤 육성 대리, 미코팀 육성">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
