--- a/price-placement.html
+++ b/price-placement.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>미코팀 | 공지사항</title>
+  <meta name="description" content="배치고사 전문 대리 서비스! 시즌 시작, 새 계정 배치고사 대리 가격을 확인하세요.">
+<meta name="keywords" content="롤 배치고사, 배치고사 대리, 롤 시즌 시작 대리, 미코팀 배치">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
