--- a/progress.html
+++ b/progress.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>미코팀 | 작업현황</title>
+  <meta name="description" content="현재 진행 중인 롤 대리 및 강의 작업을 실시간으로 확인하세요.">
+<meta name="keywords" content="롤 대리 현황, 작업현황, 미코팀 대리 상태, 실시간 롤 대리">
   <link rel="stylesheet" href="styles.css" />
 
 </head>
