--- a/price-delegation.html
+++ b/price-delegation.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>미코팀 | 공지사항</title>
+  <meta name="description" content="미코팀의 롤 대리 서비스 가격표입니다. 티어별, 옵션별로 상세하게 확인하세요.">
+  <meta name="keywords" content="롤 대리 가격, 미코팀 가격표, 리그오브레전드 대리 비용, 롤 대리 금액">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
+
 <body>
   <header class="site-header">
     <a href="index.html" class="logo">미코팀<span></span></a>
     <!-- 햄버거 버튼 -->
-  <input type="checkbox" id="menu-toggle" />
-  <label for="menu-toggle" class="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </label>
+    <input type="checkbox" id="menu-toggle" />
+    <label for="menu-toggle" class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
 
-  <!-- 네비게이션 -->
-  <nav>
-    <ul class="nav-links">
-      <li><a href="lineup.html">기사 라인업</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle">가격표</a>
-        <ul class="dropdown-menu">
-          <li><a href="price-delegation.html">대리 가격</a></li>
-          <li><a href="price-duo.html">듀오 가격</a></li>
-          <li><a href="price-placement.html">배치 고사</a></li>
-          <li><a href="price-coaching.html">1:1 강의</a></li>
-          <li><a href="price-growth.html">육성</a></li>
-          <li><a href="price-consulting.html">기타서비스</a></li>
-        </ul>
-      </li>
-      <li><a href="certification.html">작업인증</a></li>
-      <li><a href="progress.html">작업현황</a></li>
-      <li><a href="reviews.html">고객후기</a></li>
-      <li><a href="notice.html">공지사항</a></li>
-    </ul>
-  </nav>
-      
+    <!-- 네비게이션 -->
+    <nav>
+      <ul class="nav-links">
+        <li><a href="lineup.html">기사 라인업</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle">가격표</a>
+          <ul class="dropdown-menu">
+            <li><a href="price-delegation.html">대리 가격</a></li>
+            <li><a href="price-duo.html">듀오 가격</a></li>
+            <li><a href="price-placement.html">배치 고사</a></li>
+            <li><a href="price-coaching.html">1:1 강의</a></li>
+            <li><a href="price-growth.html">육성</a></li>
+            <li><a href="price-consulting.html">기타서비스</a></li>
+          </ul>
+        </li>
+        <li><a href="certification.html">작업인증</a></li>
+        <li><a href="progress.html">작업현황</a></li>
+        <li><a href="reviews.html">고객후기</a></li>
+        <li><a href="notice.html">공지사항</a></li>
+      </ul>
+    </nav>
 
-  <a href="#" class="contact-btn">
-    <img src="img/icons8-카카오-톡-48.png" alt=""> 카톡상담
-  </a>
-</header>
-<script>
+
+    <a href="#" class="contact-btn">
+      <img src="img/icons8-카카오-톡-48.png" alt=""> 카톡상담
+    </a>
+  </header>
+  <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.dropdown-toggle');
       const menu = document.querySelector('.dropdown-menu');
-  
+
       toggle.addEventListener('click', (e) => {
         e.preventDefault();
         menu.classList.toggle('open');
@@ -150,28 +154,28 @@
 
   <footer class="happyteam-footer">
     <div class="footer-content">
-        <img src="img/햄스터.webp" alt="미코팀 로고" class="footer-logo">
-        <h2>미코팀과 함께 최고의 플레이를 경험하세요!</h2>
-        <p>실력 향상부터 든든한 듀오까지, 미코팀이 여러분과 함께합니다.</p>
-        <div class="footer-links">
-            <a href="#">서비스 이용약관</a> | 
-            <a href="#">개인정보 처리방침</a> | 
-            <a href="#">문의하기</a>
-        </div>
-        <p class="copyright">© 2024 MICO. All rights reserved.</p>
+      <img src="img/햄스터.webp" alt="미코팀 로고" class="footer-logo">
+      <h2>미코팀과 함께 최고의 플레이를 경험하세요!</h2>
+      <p>실력 향상부터 든든한 듀오까지, 미코팀이 여러분과 함께합니다.</p>
+      <div class="footer-links">
+        <a href="#">서비스 이용약관</a> |
+        <a href="#">개인정보 처리방침</a> |
+        <a href="#">문의하기</a>
+      </div>
+      <p class="copyright">© 2024 MICO. All rights reserved.</p>
     </div>
-</footer>
+  </footer>
 
-<script>
+  <script>
     document.addEventListener('DOMContentLoaded', function () {
       const dropdownToggle = document.querySelector('.dropdown-toggle');
       const dropdown = dropdownToggle.closest('.dropdown');
-  
+
       dropdownToggle.addEventListener('click', function (e) {
         e.preventDefault();
         dropdown.classList.toggle('open');
       });
-  
+
       document.addEventListener('click', function (e) {
         if (!dropdown.contains(e.target)) {
           dropdown.classList.remove('open');
@@ -181,4 +185,5 @@
   </script>
 
 </body>
+
 </html>
