--- a/reviews.html
+++ b/reviews.html
@@ -6,6 +6,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>미코팀 | 고객후기</title>
+  <meta name="description" content="고객님들의 실시간 후기와 만족도 평가를 확인하세요. 미코팀은 신뢰를 최우선으로 생각합니다.">
+<meta name="keywords" content="롤 대리 후기, 미코팀 후기, 롤 고객 리뷰, 롤 만족도, 실사용 후기">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
