--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
       </ul>
     </nav>
   
-    <a href="#" class="contact-btn">
+    <a href="https://open.kakao.com/o/s4PrQ2oh" class="contact-btn" target="_blank" rel="noopener noreferrer">
       <img src="img/icons8-카카오-톡-48.png" alt=""> 카톡상담
     </a>
+    
+
   </header>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
