--- a/certification.html
+++ b/certification.html
@@ -111,12 +111,12 @@
             </div>
 
             <div class="progress-card" data-tier="challenger" data-service="delegation">
-                <img src="img/Group 3.png" alt="작업 이미지" />
+                <img src="img/Group 5.png" alt="작업 이미지" />
                 <div class="progress-tags">
-                    <span class="tag yellow">챌린저</span>
+                    <span class="tag yellow">마스터</span>
                     <span class="tag yellow">대리랭크</span>
                 </div>
-                <p class="progress-title">챌린저 랭크</p>
+                <p class="progress-title">마스터 랭크</p>
                 
             </div>
 
