--- a/progress.html
+++ b/progress.html
@@ -283,7 +283,7 @@
       text-align: right;
       margin-bottom: 20px;
       position: relative;
-      bottom: 50px;
+      bottom: 32px;
       margin-top: 100px;
     }
 
@@ -301,6 +301,54 @@
       margin-left: 6px;
       cursor: pointer;
     }
+
+    @media (max-width: 768px) {
+  .progress-section {
+    padding: 20px 3vw;
+  }
+
+  .filters {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+  }
+
+  .filters select,
+  .filters input {
+    font-size: 14px;
+    padding: 6px 10px;
+  }
+
+  .login-area input,
+  .login-area button {
+    font-size: 13px;
+    padding: 6px 8px;
+  }
+
+  .progress-table {
+    font-size: 13px;
+    overflow-x: auto;
+    display: block;
+    white-space: nowrap;
+  }
+
+  .progress-table th,
+  .progress-table td {
+    padding: 8px 6px;
+  }
+
+  .pagination button {
+    padding: 6px 10px;
+    font-size: 13px;
+  }
+
+
+  
+}
+
+
+
+    
   </style>
   </head>
 
