--- a/lineup.html
+++ b/lineup.html
@@ -9,6 +9,21 @@
 <meta name="keywords" content="롤 대리 기사, 미코팀 기사, 롤 대리 프로필, 롤 대리 전문가">
   <link rel="stylesheet" href="styles.css" />
 </head>
+
+<style>
+  @media (max-width: 768px) {
+  .main-banner {
+    margin-top: 70px; /* 헤더 높이만큼 여백 */
+  }
+
+  .main-banner img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+}
+</style>
+
 <body>
 
   <header class="site-header">
