--- a/price-delegation.html
+++ b/price-delegation.html
@@ -11,6 +11,20 @@
   <script defer src="script.js"></script>
 </head>
 
+<style>
+  @media (max-width: 768px) {
+  .main-banner {
+    margin-top: 70px; /* 헤더 높이만큼 여백 */
+  }
+
+  .main-banner img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+}
+</style>
+
 <body>
   <header class="site-header">
     <a href="index.html" class="logo">미코팀<span></span></a>
