--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   background: #111;
   color: white;
   text-align: center;
-  max-width: 1200px;
+  max-width: 1920px;
   margin: 0 auto;
   box-sizing: border-box;
+  justify-content: center;
+  gap: 88px;
 }
 
 .happyteam-reviews h2 {
@@ -53,7 +55,7 @@
   max-width: 300px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   font-size: 14px;
-  flex: 1 1 280px;
+  flex: -1 1 280px;
 }
 
 /* 버튼 */
