--- a/index.html
+++ b/index.html
@@ -13,75 +13,73 @@
 </head>
 
 <style>
- .happyteam-reviews {
-  padding: 60px 20px;
-  background: #111;
-  color: white;
-  text-align: center;
-  max-width: 1920px;
-  margin: 0 auto;
-  box-sizing: border-box;
-  justify-content: center;
-  gap: 88px;
-}
-
-.happyteam-reviews h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.happyteam-reviews p {
-  font-size: 16px;
-  color: #ccc;
-  margin-bottom: 30px;
-}
-
-/* 카드 정렬 행 */
-.reviews-row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 16px;
-  margin-bottom: 30px;
-}
-
-/* 카드 */
-.review-card {
-  background: #1c1c1c;
-  color: white;
-  padding: 20px;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 300px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.3);
-  font-size: 14px;
-  flex: -1 1 280px;
-}
-
-/* 버튼 */
-.review-button-wrap {
-  text-align: center;
-}
-
-.btn-review {
-  display: inline-block;
-  background: #00c8ff;
-  color: black;
-  padding: 12px 20px;
-  border-radius: 8px;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-/* 모바일 최적화 */
-@media (max-width: 768px) {
-  .review-card {
-    max-width: 100%;
-    flex: 1 1 100%;
+  .happyteam-reviews {
+    padding: 60px 20px;
+    background: #111;
+    color: white;
+    text-align: center;
+    max-width: 1920px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    justify-content: center;
+    gap: 88px;
   }
-}
 
+  .happyteam-reviews h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
 
+  .happyteam-reviews p {
+    font-size: 16px;
+    color: #ccc;
+    margin-bottom: 30px;
+  }
+
+  /* 카드 정렬 행 */
+  .reviews-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 16px;
+    margin-bottom: 30px;
+  }
+
+  /* 카드 */
+  .review-card {
+    background: #1c1c1c;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    font-size: 14px;
+    flex: -1 1 280px;
+  }
+
+  /* 버튼 */
+  .review-button-wrap {
+    text-align: center;
+  }
+
+  .btn-review {
+    display: inline-block;
+    background: #00c8ff;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  /* 모바일 최적화 */
+  @media (max-width: 768px) {
+    .review-card {
+      max-width: 100%;
+      flex: 1 1 100%;
+    }
+  }
 </style>
 
 <body>
@@ -240,8 +238,8 @@
         <span>- 프로게이머 | 2025.03.18</span>
       </div>
       <div class="review-card">
-        <p>💬 "롤토체스 강의 받았는데 완전 꿀팁 대방출! 이제는 챌린저 목표로 갑니다."</p>
-        <span>- TFT매니아 | 2025.03.17</span>
+        <p>💬 "듀오 강의 받았는데 완전 꿀팁 대방출! 이제는 챌린저 목표로 갑니다."</p>
+        <span>- 듀오장인 | 2025.03.17</span>
       </div>
     </div>
   </section>
